# berlin-house-hunt

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  debug_contact.py  debug_immoscout.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/: cli_approval.py  immoscout_main.py  immoscout_scraper.py  main.py  models.py  pipeline.py  scraper.py
src/immoscout/: main.py  scraper.py
src/immowelt/: main.py  scraper.py
src/utils/: browser.py  config.py  parsing.py  pipeline.py
